# chasen

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  acconfig.h  chasen-config  chasen-config.in  chasen.spec  chasen.spec.in  config.h  config.h.in  config.status  configure  configure.in  libtool  mkinstalldirs
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
chasen/: Makefile  Makefile.am  Makefile.in  chasen.c
chasen/.deps/: chasen.Po
doc/: Makefile  Makefile.am  Makefile.in  manual-j.tex
lib/: Makefile  Makefile.am  Makefile.in  block.c  chadic.h  chalib.c  chalib.h  chasen.h  connect.c  dartsdic.cpp  dartsdic.h  getid.c  getopt.c  grammar.c  init.c  iotool.c  jfgets.c  katuyou.c  lisp.c  literal.c  literal.h  mmap.c  parse.c  print.c  tokenizer.c  tokenizer.h
lib/.deps/: block.Plo  chalib.Plo  connect.Plo  dartsdic.Plo  getid.Plo  getopt.Plo  grammar.Plo  init.Plo  iotool.Plo  jfgets.Plo  katuyou.Plo  lisp.Plo  literal.Plo  mmap.Plo  parse.Plo  print.Plo  tokenizer.Plo
mkchadic/: Makefile  Makefile.am  Makefile.in  dumpdic.c  makemat.c  translate.c
mkchadic/.deps/: dumpdic.Po  makemat.Po  translate.Po
perl/: ChaSen.pm  ChaSen.xs  README
tests/: Makefile  Makefile.am  Makefile.in  cforms.cha  chasenrc  connect.cha  ctypes.cha  grammar.cha  test-chasen.sh  test-dic.sh  test.dic  test.txt  test.vch  wrong.dic
