TESTS = test-dic.sh test-chasen.sh # test-tokenizer

EXTRA_DIST = test-dic.sh test-chasen.sh \
	grammar.cha cforms.cha ctypes.cha connect.cha test.dic wrong.dic\
	test.txt test.vch chasenrc

#noinst_PROGRAMS = test-tokenizer

#INCLUDES  = -I.. -I$(srcdir)/../lib
#LDADD = $(top_builddir)/lib/libchasen.la

#test_tokenizer_SOURCES = test-tokenizer.c testunit.c
